# QIS_project

ashare-data-processing/: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
ashare-data-processing/config/: akshare_example.json  historical_membership_example.csv
ashare-data-processing/src/ashare_data_processing/: __init__.py  cli.py  exceptions.py  providers.py  quality.py  storage.py
ashare-data-processing/tests/: test_data_processing.py
factor_selection/: LICENSE  README.md  correlation_sensitivity.py  environment.yml  evaluation.py  pyproject.toml  requirements-dev.txt  selection.py  walk_forward.py  weights.py
factor_selection/factor_selection/: LICENSE  README.md  environment.yml  evaluation.py  pyproject.toml  selection.py
factor_selection/factor_selection/tests/: test_evaluation.py  test_selection.py
factor_selection/tests/: test_auxiliary_modules.py  test_evaluation.py  test_selection.py
