[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-factor-selection"
version = "0.1.0"
description = "A-share factor evaluation, orthogonalization, and selection."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.4",
  "ruff==0.15.22",
]

[tool.setuptools]
py-modules = [
  "evaluation",
  "selection",
  "correlation_sensitivity",
  "walk_forward",
  "weights",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
